[package]
name = "mistralrs-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) client for mistral.rs"
license.workspace = true
homepage.workspace = true
keywords = ["mcp", "tools", "ai", "llm"]
categories = ["api-bindings", "development-tools"]
repository.workspace = true
readme = "../README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
rust-mcp-schema.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
http.workspace = true
pyo3 = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "serde"] }
mistralrs-tool-types.workspace = true

[features]
pyo3_macros = ["pyo3", "mistralrs-tool-types/pyo3_macros"]
utoipa = ["dep:utoipa", "mistralrs-tool-types/utoipa"]

[dev-dependencies]
tokio-test = "0.4"
