[package]
name = "mistralrs-metal-compile"
readme = "../README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candle-metal-kernels = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }

[features]
default = []
metal = ["dep:candle-metal-kernels", "dep:objc2-metal"]
