[package]
name = "mistralrs-paged-attn"
readme = "../README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candle-core.workspace = true
half.workspace = true
float8.workspace = true
objc2-metal = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
dispatch2 = { workspace = true, optional = true }
candle-metal-kernels = { workspace = true, optional = true }
thiserror.workspace = true
cutile = { workspace = true, optional = true }
cutile-compiler = { workspace = true, optional = true }
cutile-ir = { workspace = true, optional = true }
cuda-core = { workspace = true, optional = true }
cuda-async = { workspace = true, optional = true }
cuda-bindings = { workspace = true, optional = true }

[build-dependencies]
cudaforge = { workspace = true, optional = true }
anyhow.workspace = true

[features]
cuda = ["dep:cudaforge", "candle-core/cuda"]
cutile = [
    "cuda",
    "dep:cutile",
    "dep:cutile-compiler",
    "dep:cutile-ir",
    "dep:cuda-core",
    "dep:cuda-async",
    "dep:cuda-bindings",
]
metal = ["dep:objc2-metal", "dep:objc2-foundation", "dep:dispatch2", "dep:candle-metal-kernels"]
