[package]
name = "mistralrs-pyo3"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "mistralrs"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
mistralrs = { version = "0.1.0", path = "../mistralrs" }
serde.workspace = true
serde_json.workspace = true
candle-core.workspace = true
indexmap.workspace = true
accelerate-src = { workspace = true, optional = true }
intel-mkl-src = { workspace = true, optional = true }

[features]
cuda = ["candle-core/cuda", "mistralrs/cuda"]
cudnn = ["candle-core/cudnn", "mistralrs/cudnn"]
metal = ["candle-core/metal", "mistralrs/metal"]
flash-attn = ["cuda", "mistralrs/flash-attn"]
accelerate = ["mistralrs/accelerate"]
mkl = ["mistralrs/mkl"]