[build-system]
requires = ["maturin==1.7"]
build-backend = "maturin"

[project]
name = "mistralrs"
version = "0.7.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]
dynamic = ["description"]

[tool.maturin]
features = ["pyo3/extension-module"]
profile = "release"
include = ["mistralrs.pyi", "py.typed"]
sdist-include = ["mistralrs.pyi", "py.typed"]
