[build-system]
requires = ["maturin==1.7"]
build-backend = "maturin"

[project]
name = "mistralrs"
# version is read from Cargo.toml (workspace version) by maturin; keeps it from drifting.
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]
dynamic = ["version", "description"]

[tool.maturin]
features = ["pyo3/extension-module"]
profile = "release"
include = ["mistralrs.pyi", "py.typed"]
sdist-include = ["mistralrs.pyi", "py.typed"]
