[package]
name = "mistralrs-quant"
readme = "README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
half.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static = "1.4"
paste = "1.0.15"
tracing.workspace = true
rayon.workspace = true
byteorder = "1.5.0"
float8.workspace = true
once_cell.workspace = true
metal = { workspace = true, optional = true }
thiserror = "1"
yoke = "0.7.5"
memmap2 = "0.9.5"
safetensors.workspace = true
regex.workspace = true
hf-hub.workspace = true

[features]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "dep:bindgen_cuda"
]
nccl = ["cuda", "candle-core/nccl"]
metal = ["candle-core/metal", "candle-nn/metal", "dep:metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]

[build-dependencies]
bindgen_cuda = { version = "0.1.5", optional = true }
