[package]
name = "mistralrs-quant"
readme = "../README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
half.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
paste.workspace = true
tracing.workspace = true
rayon.workspace = true
byteorder.workspace = true
float8.workspace = true
objc2-metal = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
dispatch2 = { workspace = true, optional = true }
candle-metal-kernels = { workspace = true, optional = true }
thiserror.workspace = true
yoke.workspace = true
memmap2.workspace = true
safetensors.workspace = true
regex.workspace = true
hf-hub.workspace = true
tokio.workspace = true
cutile = { path = "../../cutile-rs/cutile", optional = true }
cutile-compiler = { path = "../../cutile-rs/cutile-compiler", optional = true }
cutile-ir = { path = "../../cutile-rs/cutile-ir", optional = true }
cuda-core = { path = "../../cutile-rs/cuda-core", optional = true }
cuda-async = { path = "../../cutile-rs/cuda-async", optional = true }
cuda-bindings = { path = "../../cutile-rs/cuda-bindings", optional = true }

[features]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "dep:cudaforge"
]
cutile = [
    "cuda",
    "dep:cutile",
    "dep:cutile-compiler",
    "dep:cutile-ir",
    "dep:cuda-core",
    "dep:cuda-async",
    "dep:cuda-bindings",
]
nccl = ["cuda", "candle-core/nccl"]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "dep:objc2-metal",
    "dep:objc2-foundation",
    "dep:dispatch2",
    "dep:candle-metal-kernels",
]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
arm-nightly-feat = []
ring = []

cuda-11040 = []
cuda-11050 = []
cuda-11060 = []
cuda-11070 = []
cuda-11080 = []
cuda-12000 = []
cuda-12010 = []
cuda-12020 = []
cuda-12030 = []
cuda-12040 = []
cuda-12050 = []
cuda-12060 = []
cuda-12080 = []
cuda-12090 = []
cuda-13000 = []

[build-dependencies]
cudaforge = { workspace = true, optional = true }
