[package]
name = "mistralrs-server"
readme = "../README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true
default-run = "mistralrs-server"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["tokio"] }
clap.workspace = true
ctrlc.workspace = true
directories.workspace = true
either.workspace = true
indexmap.workspace = true
mistralrs-core.workspace = true
mistralrs-server-core.workspace = true
regex.workspace = true
rustyline.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rust-mcp-sdk.workspace = true
async-trait.workspace = true

[features]
cuda = ["mistralrs-core/cuda", "mistralrs-server-core/cuda"]
cudnn = ["mistralrs-core/cudnn", "mistralrs-server-core/cudnn"]
metal = ["mistralrs-core/metal", "mistralrs-server-core/metal"]
flash-attn = [
  "cuda",
  "mistralrs-core/flash-attn",
  "mistralrs-server-core/flash-attn",
]
flash-attn-v3 = [
  "cuda",
  "mistralrs-core/flash-attn-v3",
  "mistralrs-server-core/flash-attn-v3",
]
accelerate = ["mistralrs-core/accelerate", "mistralrs-server-core/accelerate"]
mkl = ["mistralrs-core/mkl", "mistralrs-server-core/mkl"]
nccl = ["mistralrs-core/nccl", "mistralrs-server-core/nccl"]
ring = ["mistralrs-core/ring", "mistralrs-server-core/ring"]
mcp-server = ["rust-mcp-sdk/server", "rust-mcp-sdk/hyper-server"]
