[package]
name = "mistralrs-web-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
# async runtime + macros
tokio = { version = "1", features = ["full"] }

# web framework + WebSocket extractor
axum = { version = "0.7", features = ["ws", "multipart"] }

# structured logging (optional but handy)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# JSON helpers
serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"

mistralrs = { path = "../mistralrs" }
futures-util = "0.3.31"
axum_static = "1.7.1"
tower-http = { version = "0.6.4", features = ["fs"] }
uuid = "1.17.0"
image.workspace = true
clap = { workspace = true, features = ["derive"] }
indexmap.workspace = true
chrono = "0.4.41"
base64.workspace = true

[features]
cuda = ["mistralrs/cuda"]
cudnn = ["mistralrs/cudnn"]
metal = ["mistralrs/metal"]
flash-attn = ["cuda", "mistralrs/flash-attn"]
accelerate = ["mistralrs/accelerate"]
mkl = ["mistralrs/mkl"]
nccl = ["mistralrs/nccl"]
