[package]
name = "mistralrs-web-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
# async runtime + macros
tokio = { workspace = true, features = ["full"] }

# web framework + WebSocket extractor
axum = { workspace = true, features = ["ws", "multipart"] }

# structured logging (optional but handy)
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

# JSON helpers
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

anyhow.workspace = true

mistralrs.workspace = true
futures-util.workspace = true
axum_static.workspace = true
tower-http = { workspace = true, features = ["fs"] }
uuid.workspace = true
image.workspace = true
clap = { workspace = true, features = ["derive"] }
indexmap.workspace = true
chrono.workspace = true
base64.workspace = true
mime_guess.workspace = true
include_dir.workspace = true
http.workspace = true
hyper.workspace = true

[features]
cuda = ["mistralrs/cuda"]
cudnn = ["mistralrs/cudnn"]
metal = ["mistralrs/metal"]
flash-attn = ["cuda", "mistralrs/flash-attn"]
accelerate = ["mistralrs/accelerate"]
mkl = ["mistralrs/mkl"]
nccl = ["mistralrs/nccl"]
