[package]
name = "mistralrs"
readme = "../README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
mistralrs-core.workspace = true
mistralrs-macros.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
serde_json.workspace = true
serde.workspace = true
schemars.workspace = true
image.workspace = true
indexmap.workspace = true
either.workspace = true
futures.workspace = true
reqwest.workspace = true
rand.workspace = true
clap.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# ========== Getting Started ==========

[[example]]
name = "simple"
path = "examples/getting_started/simple/main.rs"

[[example]]
name = "simple_stream"
path = "examples/getting_started/simple_stream/main.rs"

[[example]]
name = "vision"
path = "examples/getting_started/vision/main.rs"

[[example]]
name = "gguf"
path = "examples/getting_started/gguf/main.rs"

[[example]]
name = "gguf_locally"
path = "examples/getting_started/gguf_locally/main.rs"

[[example]]
name = "embedding"
path = "examples/getting_started/embedding/main.rs"

[[example]]
name = "async"
path = "examples/getting_started/async/main.rs"

# ========== Models ==========

[[example]]
name = "text_models"
path = "examples/models/text_models/main.rs"

[[example]]
name = "vision_models"
path = "examples/models/vision_models/main.rs"

[[example]]
name = "vision_multiturn"
path = "examples/models/vision_multiturn/main.rs"

[[example]]
name = "audio"
path = "examples/models/audio/main.rs"

[[example]]
name = "multimodal"
path = "examples/models/multimodal/main.rs"

[[example]]
name = "diffusion"
path = "examples/models/diffusion/main.rs"

[[example]]
name = "speech"
path = "examples/models/speech/main.rs"

# ========== Quantization ==========

[[example]]
name = "isq"
path = "examples/quantization/isq/main.rs"

[[example]]
name = "imatrix"
path = "examples/quantization/imatrix/main.rs"

[[example]]
name = "uqff"
path = "examples/quantization/uqff/main.rs"

[[example]]
name = "uqff_vision"
path = "examples/quantization/uqff_vision/main.rs"

[[example]]
name = "topology"
path = "examples/quantization/topology/main.rs"

[[example]]
name = "mixture_of_quant_experts"
path = "examples/quantization/mixture_of_quant_experts/main.rs"

# ========== Advanced ==========

[[example]]
name = "tools"
path = "examples/advanced/tools/main.rs"

[[example]]
name = "agent"
path = "examples/advanced/agent/main.rs"

[[example]]
name = "agent_streaming"
path = "examples/advanced/agent_streaming/main.rs"

[[example]]
name = "web_search"
path = "examples/advanced/web_search/main.rs"

[[example]]
name = "custom_search"
path = "examples/advanced/custom_search/main.rs"

[[example]]
name = "custom_tool_call"
path = "examples/advanced/custom_tool_call/main.rs"

[[example]]
name = "mcp_client"
path = "examples/advanced/mcp_client/main.rs"

[[example]]
name = "grammar"
path = "examples/advanced/grammar/main.rs"

[[example]]
name = "json_schema"
path = "examples/advanced/json_schema/main.rs"

[[example]]
name = "llguidance"
path = "examples/advanced/llguidance/main.rs"

[[example]]
name = "custom_logits_processor"
path = "examples/advanced/custom_logits_processor/main.rs"

[[example]]
name = "custom_logging"
path = "examples/advanced/custom_logging/main.rs"

[[example]]
name = "batching"
path = "examples/advanced/batching/main.rs"

[[example]]
name = "batching_embeddings"
path = "examples/advanced/batching_embeddings/main.rs"

[[example]]
name = "paged_attn"
path = "examples/advanced/paged_attn/main.rs"

[[example]]
name = "speculative"
path = "examples/advanced/speculative/main.rs"

[[example]]
name = "auto_device_map"
path = "examples/advanced/auto_device_map/main.rs"

[[example]]
name = "multi_model"
path = "examples/advanced/multi_model/main.rs"

[[example]]
name = "lora"
path = "examples/advanced/lora/main.rs"

[[example]]
name = "xlora"
path = "examples/advanced/xlora/main.rs"

[[example]]
name = "anymoe"
path = "examples/advanced/anymoe/main.rs"

[[example]]
name = "anymoe_lora"
path = "examples/advanced/anymoe_lora/main.rs"

[[example]]
name = "perplexity"
path = "examples/advanced/perplexity/main.rs"

[[example]]
name = "qwen3_embedding"
path = "examples/advanced/qwen3_embedding/main.rs"

# ========== Cookbook ==========

[[example]]
name = "cookbook_rag"
path = "examples/cookbook/rag/main.rs"

[[example]]
name = "cookbook_structured"
path = "examples/cookbook/structured/main.rs"

[[example]]
name = "cookbook_chatbot"
path = "examples/cookbook/chatbot/main.rs"

[[example]]
name = "cookbook_code_review"
path = "examples/cookbook/code_review/main.rs"

[features]
cuda = ["mistralrs-core/cuda"]
cudnn = ["mistralrs-core/cudnn"]
metal = ["mistralrs-core/metal"]
flash-attn = ["cuda", "mistralrs-core/flash-attn"]
accelerate = ["mistralrs-core/accelerate"]
mkl = ["mistralrs-core/mkl"]
nccl = ["mistralrs-core/nccl"]
ring = ["mistralrs-core/ring"]
