[package]
name = "mistralrs"
readme = "../README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
mistralrs-core.workspace = true
mistralrs-macros.workspace = true
anyhow.workspace = true
tokio.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
serde_json.workspace = true
serde.workspace = true
schemars.workspace = true
image.workspace = true
indexmap.workspace = true
either.workspace = true
futures.workspace = true
reqwest.workspace = true
rand.workspace = true
clap.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
cuda = ["mistralrs-core/cuda"]
cudnn = ["mistralrs-core/cudnn"]
metal = ["mistralrs-core/metal"]
flash-attn = ["cuda", "mistralrs-core/flash-attn"]
accelerate = ["mistralrs-core/accelerate"]
mkl = ["mistralrs-core/mkl"]
nccl = ["mistralrs-core/nccl"]
ring = ["mistralrs-core/ring"]
